Removed commented out instances of GC.AllocateUninitializedArray Removed implicit array allocation in Core.MakeProxy, and added overloads for shapes Made all generic Callbacks constrained on class, so all TContexts must be reference types. This avoids weirdness happening when you try to pass a struct, and can never set the value of the struct's members. If you require such functionality, use the unsafe overloads. Added internal unsafe Vec2* GetVertices to Shape, to support MakeProxy Added zero-heap-alloc thunks to anything that uses a generic or no-context callback. This works by stackallocating one or two nints to hold pointers to the context and/or delegate, then picking them out before calling the delegate with the context object.

--- a/src/Box2DBindings/Box2DBindings.csproj
+++ b/src/Box2DBindings/Box2DBindings.csproj
@@ -18,7 +18,7 @@
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <RootNamespace>Box2D</RootNamespace>
-        <LangVersion>latest</LangVersion>
+        <LangVersion>preview</LangVersion>
 
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
@@ -35,11 +35,13 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-      <DebugType>full</DebugType>
+        <DebugType>none</DebugType>
+        <Optimize>true</Optimize>
       <DefineConstants>TRACE</DefineConstants>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+        <DebugType>full</DebugType>
       <DefineConstants>TRACE</DefineConstants>
     </PropertyGroup>
     
