--- a/.github/workflows/check-box2d-last-tag.yml
+++ b/.github/workflows/check-box2d-last-tag.yml
@@ -12,25 +12,48 @@ jobs:
             - name: Fetch latest tag from Box2D
               id: compare_tag
               run: |
-                  latest_tag=$(curl -s https://api.github.com/repos/erincatto/box2d/tags | jq -r '.[0].name')
-                  echo "Latest tag: $latest_tag"
-                  
-                  if [ -z "$latest_tag" ] || [ "$latest_tag" = "null" ]; then
-                    echo "No valid tag found. Exiting."
+                  response=$(curl -s -w "%{http_code}" -o response.json https://api.github.com/repos/erincatto/box2d/tags)
+                  if [ "$response" -ne 200 ]; then
+                    echo "Failed to fetch tags from GitHub API. HTTP status: $response"
+                    echo "--- Response body ---"
+                    cat response.json
+                    echo "---------------------"
                     echo "changed=false" >> $GITHUB_OUTPUT
                     exit 0
                   fi
-                  
-                  recorded_tag=$(curl -s https://raw.githubusercontent.com/HughPH/Box2D-dotnet-bindings/main/box2d_last_tag.json | jq -r '.last_tag')
-                  if [ $? -ne 0 ]; then
-                    echo "No previous tag data found. Assuming first run."
+            
+                  latest_tag=$(jq -r '.[0].name' < response.json 2>/dev/null)
+            
+                  if [ $? -ne 0 ] || [ -z "$latest_tag" ] || [ "$latest_tag" = "null" ]; then
+                    echo "jq failed to parse tag or tag not found."
+                    echo "--- Response body ---"
+                    cat response.json
+                    echo "---------------------"
+                    echo "changed=false" >> $GITHUB_OUTPUT
+                    exit 0
+                  fi
+            
+                  echo "Latest tag: $latest_tag"
+            
+                  recorded_response=$(curl -s -w "%{http_code}" -o recorded_tag.json https://raw.githubusercontent.com/HughPH/Box2D-dotnet-bindings/main/box2d_last_tag.json)
+                  if [ "$recorded_response" -ne 200 ]; then
+                    echo "No previous tag data found or failed to fetch it. HTTP status: $recorded_response"
                     echo "changed=true" >> $GITHUB_OUTPUT
                     echo "latest_tag=$latest_tag" >> $GITHUB_OUTPUT
                     exit 0
                   fi
-                  
+            
+                  recorded_tag=$(jq -r '.last_tag' < recorded_tag.json 2>/dev/null)
+                  if [ $? -ne 0 ]; then
+                    echo "Failed to parse previous tag JSON."
+                    cat recorded_tag.json
+                    echo "changed=true" >> $GITHUB_OUTPUT
+                    echo "latest_tag=$latest_tag" >> $GITHUB_OUTPUT
+                    exit 0
+                  fi
+            
                   echo "Previously recorded tag: $recorded_tag"
-                  
+            
                   if [ "$latest_tag" = "$recorded_tag" ]; then
                     echo "No new tag found."
                     echo "changed=false" >> $GITHUB_OUTPUT
@@ -39,32 +62,3 @@ jobs:
                     echo "changed=true" >> $GITHUB_OUTPUT
                     echo "latest_tag=$latest_tag" >> $GITHUB_OUTPUT
                   fi
-
-            - name: Checkout repository
-              if: steps.compare_tag.outputs.changed == 'true'
-              uses: actions/checkout@v4
-              with:
-                  fetch-depth: 1
-
-            - name: Update last_tag file, commit & push
-              if: steps.compare_tag.outputs.changed == 'true'
-              run: |
-                  echo "{\"last_tag\": \"${{ steps.compare_tag.outputs.latest_tag }}\"}" > box2d_last_tag.json
-                  
-                  git config --global user.name 'github-actions'
-                  git config --global user.email 'github-actions@github.com'
-                  git add box2d_last_tag.json
-                  
-                  if git diff --staged --quiet; then
-                    echo "No changes to commit."
-                    exit 0
-                  fi
-                  
-                  git commit -m "Detected new Box2D tag: ${{ steps.compare_tag.outputs.latest_tag }}"
-                  git push
-                  
-                  echo "New tag committed. Triggering publish..."
-                  curl -X POST -H "Accept: application/vnd.github.everest-preview+json" \
-                       -H "Authorization: token ${{ secrets.PAT }}" \
-                       https://api.github.com/repos/HughPH/Box2D-dotnet-bindings/dispatches \
-                       --data '{"event_type": "publish"}'
