--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -78,6 +78,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
+          ref: ${{ github.event.client_payload.sha }}
 
       - name: Get Windows artefacts
         uses: actions/download-artifact@v4
