--- a/.github/workflows/push-build.yml
+++ b/.github/workflows/push-build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - LibraryImport
 
 jobs:
   trigger:
@@ -11,4 +12,13 @@ jobs:
     steps:
       - name: Trigger the publish pipeline
         run: |
-            curl -X POST -H "Accept: application/vnd.github.everest-preview +json" -H "Authorization: token ${{ secrets.PAT }}" https://api.github.com/repos/HughPH/Box2D-dotnet-bindings/dispatches --data '{"event_type": "publish"}'
+            curl -X POST \
+                 -H "Accept: application/vnd.github+json" \
+                 -H "Authorization: token ${{ secrets.PAT }}" \
+                 https://api.github.com/repos/HughPH/Box2D-dotnet-bindings/dispatches \
+                 -d "$(jq -nc \
+                       --arg et "publish" \
+                       --arg ref "$GITHUB_REF" \
+                       --arg sha "$GITHUB_SHA" \
+                       '{event_type:$et,client_payload:{ref:$ref,sha:$sha}}')"
+            
