--- a/.github/workflows/push-build.yml
+++ b/.github/workflows/push-build.yml
@@ -12,13 +12,12 @@ jobs:
     steps:
       - name: Trigger the publish pipeline
         run: |
-            curl -X POST \
-                 -H "Accept: application/vnd.github+json" \
-                 -H "Authorization: token ${{ secrets.PAT }}" \
-                 https://api.github.com/repos/HughPH/Box2D-dotnet-bindings/dispatches \
-                 -d "$(jq -nc \
-                       --arg et "publish" \
-                       --arg ref "$GITHUB_REF" \
-                       --arg sha "$GITHUB_SHA" \
-                       '{event_type:$et,client_payload:{ref:$ref,sha:$sha}}')"
-            
+          curl -X POST \
+               -H "Accept: application/vnd.github+json" \
+               -H "Authorization: token ${{ secrets.PAT }}" \
+               https://api.github.com/repos/HughPH/Box2D-dotnet-bindings/dispatches \
+               -d "$(jq -nc \
+                     --arg et "publish" \
+                     --arg ref "$GITHUB_REF" \
+                     --arg sha "$GITHUB_SHA" \
+                     '{event_type:$et,client_payload:{ref:$ref,sha:$sha,skip_nuget:"true"}}')"
