--- a/.github/workflows/push-build.yml
+++ b/.github/workflows/push-build.yml
@@ -7,17 +7,8 @@ on:
       - LibraryImport
 
 jobs:
-  trigger:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Trigger the publish pipeline
-        run: |
-          curl -X POST \
-               -H "Accept: application/vnd.github+json" \
-               -H "Authorization: token ${{ secrets.PAT }}" \
-               https://api.github.com/repos/HughPH/Box2D-dotnet-bindings/dispatches \
-               -d "$(jq -nc \
-                     --arg et "publish" \
-                     --arg ref "$GITHUB_REF" \
-                     --arg sha "$GITHUB_SHA" \
-                     '{event_type:$et,client_payload:{ref:$ref,sha:$sha,skip_nuget:"true"}}')"
+  call-publish-workflow:
+    uses: ./.github/workflows/publish.yml
+    with:
+      skip_nuget: true
+    secrets: inherit
