--- a/.github/workflows/push-build.yml
+++ b/.github/workflows/push-build.yml
@@ -12,27 +12,70 @@ jobs:
     strategy:
       matrix:
         include:
+          # Windows x64
           - os: windows-latest
             artifact_name: box2d-windows
             artifact_path: box2d-src/build/bin/Release/box2d.dll
-            cmake_flags: "-DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF"
+            cmake_flags: "-A x64 -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF"
             cmake_build_dir: "box2d-src/build"
-            post_build_cmd: echo 'Windows x64 build complete'
+            post_build_cmd: "echo 'Windows x64 build complete'"
 
+          # Windows x86
+          - os: windows-latest
+            artifact_name: box2d-windows-x86
+            artifact_path: box2d-src/build/bin/Release/box2d.dll
+            cmake_flags: "-A Win32 -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF"
+            cmake_build_dir: "box2d-src/build"
+            post_build_cmd: "echo 'Windows x86 build complete'"
+
+          # Windows ARM (optional)
+          - os: windows-latest
+            artifact_name: box2d-windows-arm
+            artifact_path: box2d-src/build/bin/Release/box2d.dll
+            cmake_flags: "-A ARM -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF"
+            cmake_build_dir: "box2d-src/build"
+            post_build_cmd: "echo 'Windows ARM build complete'"
+
+          # Linux x64
           - os: ubuntu-latest
             artifact_name: box2d-linux
             artifact_path: box2d-src/build/bin/libbox2d.so
-            cmake_flags: '-DBUILD_SHARED_LIBS=ON -DBOX2D_UNIT_TESTS=OFF -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS="-Wno-error=maybe-uninitialized"'
+            cmake_flags: '-DBUILD_SHARED_LIBS=ON -DBOX2D_UNIT_TESTS=OFF -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin'
             cmake_build_dir: "box2d-src/build"
             post_build_cmd: |
-              rm box2d-src/build/bin/libbox2d.so
               mv box2d-src/build/bin/libbox2d.so.3.1.0 box2d-src/build/bin/libbox2d.so
 
+          # Linux ARM
+          - os: ubuntu-latest
+            artifact_name: box2d-linux-arm
+            artifact_path: box2d-src/build/bin/libbox2d.so
+            cmake_flags: '-DCMAKE_SYSTEM_PROCESSOR=arm -DBUILD_SHARED_LIBS=ON -DBOX2D_UNIT_TESTS=OFF -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin'
+            cmake_build_dir: "box2d-src/build"
+            post_build_cmd: |
+              mv box2d-src/build/bin/libbox2d.so.3.1.0 box2d-src/build/bin/libbox2d.so
+
+          # Linux x86 (optional)
+          - os: ubuntu-latest
+            artifact_name: box2d-linux-x86
+            artifact_path: box2d-src/build/bin/libbox2d.so
+            cmake_flags: '-DCMAKE_SYSTEM_PROCESSOR=x86 -DBUILD_SHARED_LIBS=ON -DBOX2D_UNIT_TESTS=OFF -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin'
+            cmake_build_dir: "box2d-src/build"
+            post_build_cmd: |
+              mv box2d-src/build/bin/libbox2d.so.3.1.0 box2d-src/build/bin/libbox2d.so
+
+          # macOS x64
           - os: macos-latest
             artifact_name: box2d-macos
             artifact_path: box2d-src/build/bin/libbox2d.dylib
             cmake_flags: "-DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin"
-            post_build_cmd: echo 'macOS x64 build complete'
+            post_build_cmd: "echo 'macOS x64 build complete'"
+
+          # macOS ARM
+          - os: macos-latest
+            artifact_name: box2d-macos-arm
+            artifact_path: box2d-src/build/bin/libbox2d.dylib
+            cmake_flags: "-DCMAKE_OSX_ARCHITECTURES=arm64 -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin"
+            post_build_cmd: "echo 'macOS ARM build complete'"
 
     steps:
       - name: Clone Box2D (Latest Tag)
@@ -76,24 +119,60 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Get Windows artefacts
+      # Windows artifacts
+      - name: Get Windows x64 artefacts
         uses: actions/download-artifact@v4
         with:
           name: box2d-windows
           path: src/Box2DBindings/native/win-x64
 
-      - name: Get Linux artefacts
+      - name: Get Windows x86 artefacts
+        uses: actions/download-artifact@v4
+        with:
+          name: box2d-windows-x86
+          path: src/Box2DBindings/native/win-x86
+
+      - name: Get Windows ARM artefacts (if exists)
+        continue-on-error: true
+        uses: actions/download-artifact@v4
+        with:
+          name: box2d-windows-arm
+          path: src/Box2DBindings/native/win-arm
+
+      # Linux artifacts
+      - name: Get Linux x64 artefacts
         uses: actions/download-artifact@v4
         with:
           name: box2d-linux
           path: src/Box2DBindings/native/linux-x64
 
-      - name: Get macOS artefacts
+      - name: Get Linux ARM artefacts
+        uses: actions/download-artifact@v4
+        with:
+          name: box2d-linux-arm
+          path: src/Box2DBindings/native/linux-arm
+
+      - name: Get Linux x86 artefacts (if exists)
+        continue-on-error: true
+        uses: actions/download-artifact@v4
+        with:
+          name: box2d-linux-x86
+          path: src/Box2DBindings/native/linux-x86
+
+      # macOS artifacts
+      - name: Get macOS x64 artefacts (if exists)
         continue-on-error: true
         uses: actions/download-artifact@v4
         with:
           name: box2d-macos
           path: src/Box2DBindings/native/osx-x64
+
+      - name: Get macOS ARM artefacts (if exists)
+        continue-on-error: true
+        uses: actions/download-artifact@v4
+        with:
+          name: box2d-macos-arm
+          path: src/Box2DBindings/native/osx-arm
 
       - name: Setup dotnet
         uses: actions/setup-dotnet@v3
@@ -112,4 +191,4 @@ jobs:
       - name: Build and pack
         run: dotnet pack src/Box2DBindings --configuration Release --output ./artefacts
 
-      # NOTE: NuGet publishing step has been intentionally removed for push builds
+      # Skip NuGet publishing (as requested)
