--- a/.github/workflows/push-build.yml
+++ b/.github/workflows/push-build.yml
@@ -95,6 +95,11 @@ jobs:
           cd box2d-src
           mkdir build
           cd build
+          # Apply changes to disable the maybe-uninitialized flag
+          if [[ "$RUNNER_OS" == "macOS" ]]; then
+            echo "Disabling -Werror=maybe-uninitialized for macOS"
+            sed -i '' 's/-Werror=maybe-uninitialized//g' ../CMakeLists.txt
+          fi
           cmake ${{ matrix.cmake_flags }} -DCMAKE_C_FLAGS="-Wno-error=maybe-uninitialized" -DCMAKE_CXX_FLAGS="-Wno-error=maybe-uninitialized" ..
           cmake --build . --config Release
 
@@ -190,3 +195,5 @@ jobs:
 
       - name: Build and pack
         run: dotnet pack src/Box2DBindings --configuration Release --output ./artefacts
+
+      # Skip NuGet publishing (as requested)
